<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"


    tools:context="com.gmail.gorbaserver.metalhelp.MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/metal_main" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnOperation"
            style="@style/MainMenuButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClickButton"
            android:text="@string/operations" />

        <Button
            android:id="@+id/btnOrganizer"
            style="@style/MainMenuButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClickButton"
            android:text="@string/organizer" />

        <Button
            android:id="@+id/btnCalculator"
            style="@style/MainMenuButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClickButton"
            android:text="@string/main_menu_calculator" />

        <Button
            android:id="@+id/btnTableTheory"
            style="@style/MainMenuButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClickButton"
            android:text="@string/main_menu_table" />

        <Button
            android:id="@+id/btnAnalytics"
            style="@style/MainMenuButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClickButton"
            android:text="@string/analytics" />
    </LinearLayout>

</RelativeLayout>
