<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/llCalcTrubaKruglaya"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    tools:context="com.gmail.gorbaserver.metalhelp.calculator.CalcKrugFragment">


    <TextView
        tools:text="header"
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:textSize="12sp" />

    <Spinner
        android:layout_marginHorizontal="20dp"
        android:id="@+id/spinnerMetalType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <!-- _____ -->

    <LinearLayout
        android:id="@+id/llToggleButtonsConvert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:orientation="horizontal">

        <ToggleButton
            android:id="@+id/tbLengthToWeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/m_to_kg"
            android:textOff="@string/m_to_kg"
            android:textOn="@string/m_to_kg" />

        <ToggleButton
            android:id="@+id/tbWeightToLength"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/kg_to_m"
            android:textOff="@string/kg_to_m"
            android:textOn="@string/kg_to_m" />
    </LinearLayout>

    <!-- 1 row -->
    <LinearLayout

        android:id="@+id/llDiameter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:orientation="horizontal">

        <TextView

            android:id="@+id/tvDiameter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            tools:text="Диаметр, мм" />

        <Spinner

            android:id="@+id/spinnerSize"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <EditText

            android:id="@+id/etDiameter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="numberDecimal"
            android:text="" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llThickness"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvThickness"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/thickness_mm" />

        <EditText
            android:id="@+id/etThickness"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="numberDecimal"
            android:text="" />
    </LinearLayout>

    <!-- 3 row -->
    <LinearLayout
        android:id="@+id/llValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            tools:text="@string/length_m" />

        <EditText
            android:id="@+id/etValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="numberDecimal"
            android:text="" />

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp">

        <Button
            android:id="@+id/btnOk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|right"
            android:text="@string/ok" />

    </FrameLayout>

    <!-- 4 row -->
    <LinearLayout
        android:id="@+id/llResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvResult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            tools:text="@string/weight_kg" />

        <EditText
            android:id="@+id/etResult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:enabled="false"
            android:inputType="numberDecimal"
            android:text="" />

    </LinearLayout>


</LinearLayout>